--- a/crowdFunding.Web/Views/Shared/_Layout.cshtml
+++ b/crowdFunding.Web/Views/Shared/_Layout.cshtml
@@ -125,7 +125,7 @@
     </div>
 
     <footer class="border-top footer text-muted" id="js-footer">
-        <div class="container">
+        <div class="container text-center">
             &copy; 2020 - crowdFunding.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
