--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -39,7 +39,7 @@
     </div>
     <div class="col-md-2"></div>
     <div class="col-md-4">
-        <h5 class="card-title mb-3 js-back-project-name">@Model.Project.Name </h5>
+        <h4 class="card-title mb-3 js-back-project-name">@Model.Project.Name </h4>
         <p>
             by <a href="@Url.Action("Details", "User", new { id = Model.Project.User.UserId })">
                 @Model.Project.User.FirstName @Model.Project.User.LastName
@@ -48,7 +48,7 @@
         <div class="progress mb-3" style="height:6px;">
             <div class="progress-bar bg-success" role="progressbar" style="width: @Model.Project.Percentage()" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <h5 class="card-title mt-3">@Model.Project.AmountGathered / @Model.Project.AmountRequired €</h5>
+        <h5 class="card-title mt-3">@Model.Project.AmountGathered € of @Model.Project.AmountRequired € required</h5>
         <p class="card-text mt-3">@Model.Project.NumberOfBackers Backers</p>
         <a href="@Url.Action("Search", "Project", new { category = Model.Project.Category})" class="text-dark mt-4"><u>@Model.Project.Category</u></a>
         <p class="card-text mt-3"><i><strong>Due to @Model.Project.DueTo.ToString("d")</strong></i></p>
