--- a/crowdFunding.Web/Views/Project/Edit.cshtml
+++ b/crowdFunding.Web/Views/Project/Edit.cshtml
@@ -86,29 +86,9 @@
 
         </select>
     </div>
-    <div class="form-group">
-        <label for="Project Title">Project Title</label>
-        <input class="rewardName form-control" id="rewardname" placeholder="Enter your rewards name">
-
-    </div>
 
     <div class="form-group">
-        <label for="Project Title">Project Title</label>
-        <input class="rewardDescription form-control" id="rewarddescr" placeholder="Reward Descr">
-
-    </div>
-    <div class="form-group">
-        <label for="Project Title">Project Title</label>
-        <input class="rewardAmount form-control" id="rewardamount" placeholder="Reward Am">
-
-    </div>
-    @*<div class="form-group">
-            <label for="dueto">Due Date:</label>
-            <input type="date" id="rewardName"placeholder="Due Date" value="@Model.DueTo.ToString("yyyy-MM-dd")">
-        </div>*@
-
-    <div class="form-group">
-        <label for="url">Enter an https:// URL: for your Project's Photo</label>
+        <label for="url">Enter a url for the photo</label>
 
         <input type="url" name="url" id="js-projectedit-photos"
                placeholder="https://example.com"
@@ -117,7 +97,7 @@
     </div>
 
     <div class="form-group">
-        <label for="url">Enter an https:// URL:</label>
+        <label for="url">Enter a url for the video:</label>
 
         <input type="url" name="url" id="js-projectedit-videos"
                placeholder="https://example.com"
@@ -148,6 +128,17 @@
     <button id="addRewardPackageButton" type="button" class="btn btn-primary mb-3" data-target="modalCreateRewardPackages">
         Add Reward Package
     </button>
+
+
+
+    @* DISABLE PROJECT *@
+    <div>
+        <button type="button" class="btn btn-danger float-right mt-3" id="jsDisableProject" style="margin-left:50px">
+            Disable Project!
+        </button>
+        <!-- Modal -->
+        
+    </div>
 
     <div class="alert alert-success js-projectedit-success-alert" role="alert">
         Project was successfully update!
