--- a/crowdFunding.Web/Views/Project/Edit.cshtml
+++ b/crowdFunding.Web/Views/Project/Edit.cshtml
@@ -73,7 +73,7 @@
 
     <div class="form-group">
         <label class="form-font" for="category">Category:</label>
-        <select class="js-project-create-category create-project-form" placeholder="Category:">
+        <select class="js-projectedit-category create-project-form" placeholder="Category:">
             <option selected="selected">@Model.Category</option>
             <option value="1">Arts</option>
             <option value="2">Comics & Illustration</option>
@@ -83,14 +83,8 @@
             <option value="6">Games</option>
             <option value="7">Music</option>
             <option value="8">Publishing</option>
-
         </select>
     </div>
-
-    @*<div class="form-group">
-            <label for="dueto">Due Date:</label>
-            <input type="date" id="rewardName"placeholder="Due Date" value="@Model.DueTo.ToString("yyyy-MM-dd")">
-        </div>*@
 
     <div class="form-group">
         <label for="url">Enter an https:// URL: for your Project's Photo</label>
@@ -98,7 +92,7 @@
         <input type="url" name="url" id="js-projectedit-photos"
                placeholder="https://example.com"
                pattern="https://.*" size="30"
-               required value="@Model.Photos[0].Url">
+               >
     </div>
 
     <div class="form-group">
@@ -107,7 +101,7 @@
         <input type="url" name="url" id="js-projectedit-videos"
                placeholder="https://example.com"
                pattern="https://.*" size="30"
-               required value="@Model.Videos[0].Url">
+               >
     </div>
 
     <div class="form-group">
