--- a/crowdFunding.Web/Views/Project/Details.cshtml
+++ b/crowdFunding.Web/Views/Project/Details.cshtml
@@ -140,11 +140,11 @@
                         <p class="card-text">@rp.Description</p>
 
                         <button type="button" class="btn see-rewards mb-3"
-                                data-toggle="modal" data-target="#myModal">
+                                data-toggle="modal" data-target="#myModal-@rp.RewardPackageId">
                             Checkout Rewards
                         </button>
 
-                        <div class="modal fade right" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                        <div class="modal fade right" id="myModal-@rp.RewardPackageId" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
                              aria-hidden="true" data-backdrop="true">
                             <div class="modal-dialog modal-side modal-bottom-right modal-notify modal-danger" role="document">
                                 <div class="modal-content">
