--- a/crowdFunding.Web/Views/Project/Edit.cshtml
+++ b/crowdFunding.Web/Views/Project/Edit.cshtml
@@ -61,8 +61,28 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" id="addRewardsButton" class="btn btn-primary">Add</button>                        
+                        <button type="button" id="addRewardsButton" class="btn btn-primary">Add</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="modalCreateStatusUpdate" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Create a status update.</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <label class="form-font" for="Status">New Status</label>
+                    <textarea class="js-statusUpdate form-control" id="statusUpdate" placeholder="Post your update.." rows="3"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="addStatusButton" class="btn btn-primary">Add</button>
                 </div>
             </div>
         </div>
@@ -88,17 +108,16 @@
 
     </div>
     @*<div class="form-group">
-        <label for="dueto">Due Date:</label>
-        <input type="date" id="rewardName"placeholder="Due Date" value="@Model.DueTo.ToString("yyyy-MM-dd")">
-    </div>*@
+            <label for="dueto">Due Date:</label>
+            <input type="date" id="rewardName"placeholder="Due Date" value="@Model.DueTo.ToString("yyyy-MM-dd")">
+        </div>*@
 
     <div class="form-group">
         <label for="url">Add a Photo:</label>
 
         <input type="url" class="create-project-form" name="url" id="js-projectedit-photos"
                placeholder="https://example.com"
-               pattern="https://.*" size="30"
-               >
+               pattern="https://.*" size="30">
     </div>
 
     <div class="form-group">
@@ -106,14 +125,12 @@
 
         <input type="url" class="create-project-form" name="url" id="js-projectedit-videos"
                placeholder="https://example.com"
-               pattern="https://.*" size="30"
-               >
+               pattern="https://.*" size="30">
     </div>
 
     <div class="form-group">
         <label class="form-font" for="Description">Project Description</label>
         <textarea class="js-projectedit-description form-control" id="ProjectDesc" placeholder="Write your description here..." rows="3">@Model.Description</textarea>
-
     </div>
 
 
@@ -130,6 +147,9 @@
     <button id="addRewardPackageButton" type="button" class="btn see-rewards rewards mb-3" data-target="modalCreateRewardPackages">
         Add Reward Package
     </button>
+    <button id="addStatusUpdateButton" type="button" class="btn see-rewards rewards mb-3" data-target="modalCreateStatusUpdate">
+        Post Status Update
+    </button>
 
     <br>
 
@@ -145,7 +165,7 @@
             Disable Project!
         </button>
         <!-- Modal -->
-        
+
     </div>
 
     <div class="alert alert-success js-projectedit-success-alert" role="alert">
