--- a/crowdFunding.Web/Views/User/MyProfile.cshtml
+++ b/crowdFunding.Web/Views/User/MyProfile.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "MyProfile";
 }
 
-
 @if (Model == null)
 {
     <div class="row text-center">
@@ -110,7 +109,7 @@
                             <!-- Title -->
                             <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
                             <!-- Text -->
-                            <p class="card-text mt-2">@p.Description</p>
+                            <p class="card-text mt-2">@p.ConcatDescription()</p>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">
                                     by
